# formula_destruction_cli_tool

./: Cargo.toml  file.json
.sqlx/: query-d5d89ee4869e6a230c0bde371e763f15fe5d2aa6512829510b08ce37e9ab4b0c.json
src/: fileparser.rs  lib.rs  main.rs
