[package]
name = "formula_destruction_cli_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = {version = "1.0.0", features = ["full"]}
dotenv = "0.15.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.39.3", features = ["full"] }
